# sirius_robot

./: README.md
sirius_bringup/: CMakeLists.txt  README.md  launch_from_service.sh  package.xml
sirius_bringup/config/: hardware_interfaces.yaml
sirius_bringup/launch/: hardware_interfaces.launch  sirius.launch  web_interface.launch
sirius_depthai_driver/: CMakeLists.txt  README.md  package.xml
sirius_depthai_driver/launch/: sirius_depthai_driver.launch
sirius_depthai_driver/src/: sirius_depthai_driver.cpp
sirius_odrive_driver/: CMakeLists.txt  README.md  odrive_hw_plugin.xml  package.xml
sirius_odrive_driver/include/: control.h
sirius_odrive_driver/scripts/: driver.py  relaxing_middleware.py
sirius_odrive_driver/src/: control.cpp
sirius_roboclaw_driver/: CMakeLists.txt  package.xml
sirius_robot/: CMakeLists.txt  package.xml
