<?xml version="1.0"?>
<package format="2">
  <name>sirius_depthai_driver</name>
  <version>1.0.0</version>
  <description>Sirius camera nodes and launch files</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_info_manager</depend>
  <depend>depthai_bridge</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>depthai</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>depthai-ros</exec_depend>
  <exec_depend>imu_transformer</exec_depend>
  <exec_depend>nodelet</exec_depend>

</package>
