<?xml version="1.0"?>
<package format="2">
  <name>sirius_odrive_driver</name>
  <version>1.0.0</version>
  <description>ROS hardware interface for the ODrive motor controllers</description>

  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <author>Gabriel Brzeziński</author>

  <license>Apache-2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-odrive-pip</exec_depend>
  <depend>combined_robot_hw</depend>
  <depend>realtime_tools</depend>

  <export>
    <hardware_interface plugin="${prefix}/odrive_hw_plugin.xml"/>
  </export>
</package>
